// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeDataPicker should be rendered if many params defined 1`] = `
<div
  className="uui-size-36 uui-range-date-picker root uui-disabled uui-readonly uui-invalid"
  onKeyDown={[Function]}
>
  <div
    className="container uui-input-box uui-disabled uui-readonly uui-invalid root uui-size-36 uui-control-mode-form dateInput"
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
    <input
      aria-disabled={true}
      aria-invalid={true}
      className="uui-input"
      disabled={true}
      id="date"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="separator"
  />
  <div
    className="container uui-input-box uui-disabled uui-readonly uui-invalid root uui-size-36 uui-control-mode-form dateInput"
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <input
      aria-disabled={true}
      aria-invalid={true}
      className="uui-input"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder=""
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`RangeDataPicker should be rendered if minimum params and custom format defined 1`] = `
<div
  className="uui-size-36 uui-range-date-picker root"
  onKeyDown={[Function]}
>
  <div
    className="container uui-input-box -clickable root uui-size-36 uui-control-mode-form dateInput"
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
    <input
      className="uui-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="From:"
      tabIndex={0}
      type="text"
      value=""
    />
  </div>
  <div
    className="separator"
  />
  <div
    className="container uui-input-box -clickable root uui-size-36 uui-control-mode-form dateInput"
    onClick={[Function]}
    onFocus={[Function]}
    tabIndex={-1}
  >
    <input
      className="uui-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="To:"
      tabIndex={0}
      type="text"
      value=""
    />
  </div>
</div>
`;
